# mycobot_ros2

docker/: Dockerfile.mycobot_sim.humble  Dockerfile.mycobot_sim.iron  Dockerfile.mycobot_sim.jazzy  build_image.sh  create_container.sh  launches.py  mycobot_entrypoint.sh  remove_container.sh  remove_image.sh  ros_entrypoint.sh  start_container.sh  stop_container.sh
hello_mtc_with_perception/: CMakeLists.txt  package.xml
hello_mtc_with_perception/urdf/: mycobot_280.urdf.xacro
mycobot_280pi_description/: CMakeLists.txt  package.xml
mycobot_280pi_description/launch/: visualize_slider_control.launch.py
mycobot_280pi_description/meshes/: G_base.stl  joint2.stl  joint3.stl  joint4.stl  joint5.dae  joint5.stl  joint51.dae  joint6.stl  joint7.stl
mycobot_280pi_description/urdf/: mycobot_280_pi.urdf
mycobot_280pi_gazebo/: CMakeLists.txt  package.xml
mycobot_280pi_gazebo/config/: mycobot_280pi_controllers.yaml  ros_gz_bridge.yaml
mycobot_280pi_gazebo/launch/: bringup.launch.py  bringup_no_app.launch.py  mycobot_280pi_bringup_gazebo.launch.py  mycobot_280pi_bringup_gazebo_real_vision.launch.py  mycobot_280pi_bringup_gazebo_sim_vision.launch.py
mycobot_280pi_gazebo/models/hello_mtc_with_perception_cylinder/: model.sdf
mycobot_280pi_gazebo/models/hello_mtc_with_perception_cylinder_blue/: model.config  model.sdf
mycobot_280pi_gazebo/models/hello_mtc_with_perception_cylinder_green/: model.config  model.sdf
mycobot_280pi_gazebo/models/hello_mtc_with_perception_cylinder_red/: model.config  model.sdf
mycobot_280pi_gazebo/models/hello_mtc_with_perception_cylinder_yellow/: model.config  model.sdf
mycobot_280pi_gazebo/scripts/: detect_object_tf.py  republish_joints.py
mycobot_280pi_gazebo/urdf/: mycobot_280_pi_real_robot.xacro  mycobot_280pi.xacro  mycobot_280pi_gazebo.xacro  mycobot_280pi_gazebo_real.xacro  mycobot_280pi_ros2_control.xacro
mycobot_280pi_gazebo/worlds/: empty.world
mycobot_280pi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_280pi_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  mycobot_280pi.ros2_control.xacro  mycobot_280pi.srdf  mycobot_280pi.urdf.xacro  ros2_controllers.yaml
mycobot_280pi_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mycobot_280pi_pick_app/: CMakeLists.txt  package.xml
mycobot_280pi_pick_app/src/: mycobot_280pi_pick_app.cpp
mycobot_gazebo/config/: ros_gz_bridge.yaml
mycobot_gazebo/urdf/: mycobot_280_gazebo.urdf.xacro
mycobot_hw/mycobot_ros2/mycobot_280/mycobot_280pi/: setup.py
mycobot_hw/mycobot_ros2/mycobot_280/mycobot_280pi/launch/: no_slider_control.launch.py
mycobot_hw/mycobot_ros2/mycobot_280/mycobot_280pi/mycobot_280pi/: slider_control_new.py
mycobot_hw/mycobot_ros2/mycobot_280/mycobot_interfaces/: CMakeLists.txt  package.xml
mycobot_hw/mycobot_ros2/mycobot_description/: setup.py
mycobot_moveit_config/: CMakeLists.txt
mycobot_moveit_config_manual_setup/config/: moveit.rviz  mycobot_280.srdf
mycobot_moveit_config_manual_setup/launch/: demo.launch.py  demo.launch1.py  move_group0.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py
